--- a/GKMetroWeb/MasterPage.master
+++ b/GKMetroWeb/MasterPage.master
@@ -1,6 +1,5 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="MasterPage" %>
 
-<!DOCTYPE html>
 
 <html>
     <head runat="server">
@@ -32,9 +31,9 @@
 
     <title> Gopala Krishna's Website</title>
 </head>
-<body class="metro bg-white">
+<body class="metro" style="background-color: black"" >
     <form id="form1" runat="server">
-        <div class="navigation-bar dark">
+    <div class="navigation-bar dark">
         <div class="navigation-bar-content container">
         <a href="/" class="element"><span class="icon-grid-view  fg-blue"></span> GopalaKrishna <sup>1.0</sup></a>
         <span class="element-divider"></span>
@@ -215,27 +214,18 @@
                 </ul>
             </li>-->
         </ul>
-
-        <!--<div class="no-tablet-portrait no-phone">
-            <a title="Nuget.org" href="https://www.nuget.org/packages/Metro.UI.CSS/" class="element place-right"><span class="icon-box-add"></span></a>
-            <span class="element-divider place-right"></span>
-            <a title="GitHub" href="https://github.com/olton/Metro-UI-CSS" class="element place-right"><span class="icon-github"></span></a>
-            <span class="element-divider place-right"></span>
-            <a title="CSS3 validator" href="http://jigsaw.w3.org/css-validator/validator?uri=metroui.org.ua&profile=css3&usermedium=all&warning=no&vextwarning=" class="element place-right"><span class="icon-css3"></span></a>
-            <span class="element-divider place-right"></span>
-            <div class="element place-right" title="GitHub Stars"><span class="icon-star"></span> <span class="github-watchers">0</span></div>
-            <!--<span class="element-divider place-right"></span>-->
-            <!--<div class="element place-right" title="GitHub Forks"><span class="icon-share-2"></span> <span class="github-forks">0</span></div>-->
+        
         </div>
     </div>
    
+    
     <asp:ContentPlaceHolder id="ContentPlaceHolder1"  runat="server">
 
     </asp:ContentPlaceHolder>
-<%--<footer class ="" data-load ="Footer.aspx"></footer>--%>
+        <%--<footer class ="" data-load ="Footer.aspx"></footer>--%>
 
-        <div class="bg-black">
-            <div class="container">
+    <div class="bg-black">
+            <div class="container" style="padding: 10px;">
                 <div class="grid no-margin">
                     <div class="row no-margin">
 
@@ -261,11 +251,10 @@
                              <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgeekgopalakrishna.com%2F&amp;width=200&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:21px;" allowTransparency="true"></iframe>
                         </div>
 
-                           
-                     
-                         <div class="span6 padding5">
+                        <div class="span6 padding5">
                                     <p class="fg-white">Contact me if you need professional advice on</p>
                             </div>
+
                         <div class="span3 padding10">
                             <a class="button bg-green fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Microsoft.NET</a>
                             <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Windows 8</a>
@@ -275,7 +264,8 @@
                             <a class="button bg-magenta fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Mobile Device Management</a>
                             <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Cross Platform Technologies</a>
                         </div>
-                      <div class="span3 padding10">
+
+                        <div class="span3 padding10">
                         <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Frameworks Design</a>
                             <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Windows Internals</a>
                             <a class="button bg-pink fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Web Scalability Design</a>
@@ -289,7 +279,7 @@
                 </div>
             </div>
 
-            <div class="container tertiary-text bg-black fg-white" >
+            <div class="container tertiary-text bg-black fg-white" style="padding: 10px " >
                 <footer>
                     <div class="bottom-menu-wrapper fg-white" >
                         <ul class="horizontal-menu compact fg-white">
@@ -303,8 +293,9 @@
                     </div>
                 </footer>
             </div>
-        </div>
-        <script src="js/hitua.js"></script>
-        </form>
+    </div>
+   
+      <script src="js/hitua.js"></script>
+   </form>
 </body>
 </html>
