--- a/GKMetroWeb/MasterPage.master
+++ b/GKMetroWeb/MasterPage.master
@@ -3,6 +3,8 @@
 
 <html>
     <head runat="server">
+    <link rel ="SHORTCUT ICON" href="/images/MyPhotos/1.jpg" />
+       
      <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="product" content="Gopala Website"/>
