fixed footer space issue

--- a/GKMetroWeb/MasterPage.master
+++ b/GKMetroWeb/MasterPage.master
@@ -95,15 +95,15 @@
      <%--<footer class ="" data-load ="Footer.aspx"></footer>--%>
 
     <div class="bg-black">
-            <div class="container" style="padding: 10px;">
+            <div class="container" style="padding: 5px;">
                 <div class="grid no-margin">
                     <div class="row no-margin">
 
-                        <div class="span3 padding10">
+                        <div class="span3 padding0">
                             <img src="/images/Gopala_iit.jpg" alt="" class="polaroid" />
                         </div>
 
-                        <div class="span4 padding10">
+                        <div class="span4 padding0">
 
                             <h3 class="fg-white">Follow Me</h3>
                             <a class="icon-blogger on-right on-left" href ="http://gopalakrishnaiitb.blogspot.in/" style="background: orange;color: white; padding: 10px; border-radius: 50%"></a>
@@ -122,10 +122,10 @@
                         </div>
 
                         <div class="span6 padding5">
-                                    <p class="fg-white">Contact me if you need professional advice on</p>
-                            </div>
+                                    <h4 class="fg-white">Contact me if you need professional advice on</h4>
+                         </div>
 
-                        <div class="span3 padding10">
+                        <div class="span3 padding0">
                             <a class="button bg-green fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Microsoft.NET</a>
                             <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Windows 8</a>
                             <a class="button bg-red fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Hacking</a>
@@ -135,7 +135,7 @@
                             <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Cross Platform Technologies</a>
                         </div>
 
-                        <div class="span3 padding10">
+                        <div class="span3 padding0">
                         <a class="button bg-yellow fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Frameworks Design</a>
                             <a class="button bg-blue fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Windows Internals</a>
                             <a class="button bg-pink fg-white" style="width: 100%; margin-bottom: 5px" href=" ">Web Scalability Design</a>
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="container tertiary-text bg-black fg-white" style="padding: 10px " >
+            <div class="container tertiary-text bg-black fg-white " style="padding: 0px " >
                 <footer>
                     <div class="bottom-menu-wrapper fg-white" >
                         <ul class="horizontal-menu compact fg-white">
