--- a/GKMetroWeb/MasterPage.master
+++ b/GKMetroWeb/MasterPage.master
@@ -3,7 +3,7 @@
 
 <html>
     <head runat="server">
-    <link rel ="SHORTCUT ICON" href="/images/MyPhotos/1.jpg" />
+     <link rel ="SHORTCUT ICON" href="/images/MyPhotos/1.jpg" />
        
      <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
@@ -16,25 +16,22 @@
     <link href="css/metro-bootstrap-responsive.css" rel="stylesheet"/>
     <link href="css/iconFont.css" rel="stylesheet"/>
     <link href="css/docs.css" rel="stylesheet"/>
-    <link href="js/prettify/prettify.css" rel="stylesheet"/>
 
 
     <!-- Load JavaScript Libraries -->
-    <script src="js/jquery/jquery.min.js"></script>
-    <script src="js/jquery/jquery.widget.min.js"></script>
-    <script src="js/jquery/jquery.mousewheel.js"></script>
-    <script src="js/prettify/prettify.js"></script>
-    <script src="js/gplus-youtubeembed.js"></script>
+    <script src="<%= ResolveUrl("~/js/jquery/jquery.min.js")%>"></script>
+    <script src="<%= ResolveUrl("~/js/jquery/jquery.widget.min.js")%>"></script>
+    <script src="<%= ResolveUrl("~/js/jquery/jquery.mousewheel.js")%>"></script>
+
 
     <!-- Metro UI CSS JavaScript plugins -->
-    <script src="js/load-metro.js"></script>
+    <script src="<%= ResolveUrl("~/js/load-metro.js")%>"></script>
     
 
     <!-- Local JavaScript -->
-    <script src="js/docs.js"></script>
-    <script src="js/github.info.js"></script>
+    <script src="<%= ResolveUrl("~/js/docs.js")%>"></script>
 
-    <title> Gopala Krishna's Website</title>
+  <title> Gopala Krishna's Website</title>
 </head>
 <body class="metro" style="background-color: black"" >
     <form id="form1" runat="server">
@@ -78,7 +75,7 @@
              <li>
                 <a href="#" class="dropdown-toggle">GuestBook</a>
                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover"">
-                    <li><a href="Guestbook.aspx ">Sign In GuestBook</a></li>
+                    <li><a href="../UIGuestbook/Guestbook.aspx ">Sign In GuestBook</a></li>
                 </ul>
             </li>
             
@@ -168,10 +165,6 @@
       <script src="js/hitua.js"></script>
    </form>
 </body>
-
-<%--Optimize youtube video loading--%>
-
-<script type="text/javascript">optimizeYouTubeEmbeds()</script>
 
 <%--Google analytics tracking--%>
 <script>
