--- a/GKMetroWeb/MasterPage.master
+++ b/GKMetroWeb/MasterPage.master
@@ -46,15 +46,15 @@
                     <li>
                         <a href="#" class="dropdown-toggle">About Me</a>
                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
-                            <li><a href="../../UIMyPersonal/AboutMe/MyInterests.aspx">My Interests</a></li>
-                            <li><a href="../../UIMyPersonal/AboutMe/MyProfession.aspx">My Profession</a></li>
+                            <li><a href="../../../UIMyPersonal/AboutMe/MyInterests.aspx">My Interests</a></li>
+                            <li><a href="../../../UIMyPersonal/AboutMe/MyProfession.aspx">My Profession</a></li>
                             <li><a href="">My Family</a></li>
                         </ul>
                     </li>
                      <li>
                         <a href="#" class="dropdown-toggle">Photos</a>
                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
-                            <li><a href="../../UIMyPersonal/Photos/MyPhotos.aspx">My Photos</a></li>
+                            <li><a href="../../../UIMyPersonal/Photos/MyPhotos.aspx">My Photos</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -68,9 +68,140 @@
               <li>
                 <a href="#" class="dropdown-toggle">Music</a>
             </li>
-            <li>
+          
+            
+            
+            
+             <li>
                 <a class="dropdown-toggle"  href="#">Technology</a>
-            </li>
+
+                <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                   
+                     <li>
+                        <a href="#" class="dropdown-toggle">Open Source</a>
+                        <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                            <li>
+                                  <a href="#" class="dropdown-toggle">Linux</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                            </li>
+                          <%--  <li>
+                                  <a href="#" class="dropdown-toggle">Android</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                            </li>
+                              <li>
+                                  <a href="#" class="dropdown-toggle">Apple</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                            </li>
+                              <li>
+                                  <a href="#" class="dropdown-toggle">Communities</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                            </li>--%>
+                        </ul>
+                 </li>
+
+                  <li>
+                        <a href="#" class="dropdown-toggle">Microsoft</a>
+                        <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                          <%--  <li>
+                                  <a href="#" class="dropdown-toggle">DotNet</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                         </li>
+                              <li>
+                                  <a href="#" class="dropdown-toggle">Windows</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                            </li>
+                              <li>
+                                  <a href="#" class="dropdown-toggle">Communities</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                            </li>--%>
+                        </ul>
+                 </li>
+
+                      <li>
+                        <a href="#" class="dropdown-toggle">Hacking</a>
+                      <%--  <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                            <li>
+                                  <a href="#" class="dropdown-toggle">Linux</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                         </li>
+                        </ul>--%>
+                 </li>
+
+                      <li>
+                        <a href="#" class="dropdown-toggle">Databases</a>
+                       <%-- <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                            <li>
+                                  <a href="#" class="dropdown-toggle">Linux</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                         </li>
+                        </ul>--%>
+                 </li>
+
+                    <li>
+                        <a href="#" class="dropdown-toggle">Tools</a>
+                        <%--<ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                            <li>
+                                  <a href="#" class="dropdown-toggle">Linux</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                         </li>
+                        </ul>--%>
+                 </li>
+
+                  <li>
+                        <a href="#" class="dropdown-toggle">Blogs</a>
+                       <%-- <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                            <li>
+                                  <a href="#" class="dropdown-toggle">Linux</a>
+                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="../../../UITechnology/OpenSource/Linux/LinuxBasics.aspx">LinuxBasics</a></li>
+                                            <li></li>
+                                         </ul>
+                         </li>
+                        </ul>--%>
+                 </li>
+
+
+               </ul>
+
+             </li>
+                 
+                 
+            
+
+
+
+
+
           
             <li>
                 <a class="dropdown-toggle"  href="#">Product Management</a>
@@ -81,7 +212,7 @@
              <li>
                 <a href="#" class="dropdown-toggle">GuestBook</a>
                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover"">
-                    <li><a href="../../UIGuestbook/Guestbook.aspx ">Sign In GuestBook</a></li>
+                    <li><a href="../../../UIGuestbook/Guestbook.aspx ">Sign In GuestBook</a></li>
                 </ul>
             </li>
             
