--- a/GKMetroWeb/MasterPage.master
+++ b/GKMetroWeb/MasterPage.master
@@ -40,6 +40,8 @@
         <a href="/" class="element"><span class="icon-grid-view  fg-blue"></span> GopalaKrishna <sup>1.0</sup></a>
         <span class="element-divider"></span>
         <ul class="element-menu">
+
+
             <li>
                 <a class="dropdown-toggle" href ="#">My Personal</a>
                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
@@ -59,9 +61,29 @@
                     </li>
                 </ul>
             </li>
-             <li>
-                <a href="#" class="dropdown-toggle">InterestingStuff</a>
+
+
+
+              <li>
+                <a class="dropdown-toggle" href ="#">Interesting Stuff</a>
+                <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                    <li>
+                        <a href="#" class="dropdown-toggle">Interesting Facts</a>
+                        <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                            <li><a href="../../../UIInterestingStuff/InterstingFacts/InterestingScienceFacts.aspx">Interesting Science Facts</a></li>
+                        </ul>
+                    </li>
+                     <li>
+                        <a href="#" class="dropdown-toggle">Interesting Optical Illusions</a>
+                        <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                            <li><a href="../../../UIInterestingStuff/InterestingOpticalIllusions/InterestingOpticalIllusions.aspx">Can We Believe Our Eyes?</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </li>
+
+
+
              <li>
                 <a href="#" class="dropdown-toggle">Math Fun</a>
             </li>
