--- a/GKMetroWeb/MasterPage.master
+++ b/GKMetroWeb/MasterPage.master
@@ -17,12 +17,15 @@
     <link href="css/iconFont.css" rel="stylesheet"/>
     <link href="css/docs.css" rel="stylesheet"/>
 
+ 
+
 
     <!-- Load JavaScript Libraries -->
     <script src="<%= ResolveUrl("~/js/jquery/jquery.min.js")%>"></script>
     <script src="<%= ResolveUrl("~/js/jquery/jquery.widget.min.js")%>"></script>
     <script src="<%= ResolveUrl("~/js/jquery/jquery.mousewheel.js")%>"></script>
 
+ 
 
     <!-- Metro UI CSS JavaScript plugins -->
     <script src="<%= ResolveUrl("~/js/load-metro.js")%>"></script>
@@ -237,6 +240,10 @@
                     <li><a href="../../../UIGuestbook/Guestbook.aspx ">Sign In GuestBook</a></li>
                 </ul>
             </li>
+            <li>
+            <a href ="Header.aspx"><span class ="icon-search bg-black fg-white" /></a>
+       
+            </li>
             
         </ul>
         
@@ -336,4 +343,7 @@
   ga('send', 'pageview');
 
 </script>
+
+
+
 </html>
