--- a/GKMetroWeb/MasterPage.master
+++ b/GKMetroWeb/MasterPage.master
@@ -241,7 +241,7 @@
                 </ul>
             </li>
             <li>
-            <a href ="Header.aspx"><span class ="icon-search bg-black fg-white" /></a>
+            <a href ="../../../Search.aspx"><span class ="icon-search bg-dark fg-white" /></a>
        
             </li>
             
