--- a/GKMetroWeb/css/search/styles.css
+++ b/GKMetroWeb/css/search/styles.css
@@ -4,22 +4,30 @@
 }
 
 body{
-	font-size:20px;
+	font-size:13px;
 	color:#eee;
-	font-family: 'Segoe UI';
+	font-family:Arial, Helvetica, sans-serif;
 	/*background:url('img/bg.jpg') repeat-x #718693;*/
 }
 
 #page{
 	/* The main container div */
-	width:620px;
+	width:609px;
 	margin:100px auto 0;
+    height: 156px;
+}
+
+h1{
+	font-family:Corbel,'Myriad Pro',Arial, Helvetica, sans-serif;
+	background:url('img/heading.png') no-repeat center top;
+	text-indent:-9999px;
+	overflow:hidden;
+	height:90px;
 }
 
 #searchForm{
 	/* The search form. */
 	/*background-color:#4C5A65;*/
-    background-color:skyblue;
 	padding:50px 50px 30px;
 	margin:80px 0;
 	position:relative;
@@ -27,6 +35,10 @@ body{
 	-moz-border-radius:16px;
 	-webkit-border-radius:16px;
 	border-radius:16px;
+    top: -66px;
+    left: 252px;
+    height: 1px;
+    width: 982px;
 }
 
 fieldset{
@@ -50,7 +62,7 @@ fieldset{
 	background:url("../../images/search/searchBox.png") no-repeat;
 	
 	float:left;
-	font-family:'Segoe UI';
+	font-family:Arial,Helvetica,sans-serif;
 	font-size:15px;
 	height:36px;
 	line-height:36px;
@@ -73,7 +85,7 @@ fieldset{
 .icons li{
 	background:url("img/icons.png") no-repeat;
 	float:left;
-	height:10px;
+	height:19px;
 	text-indent:-9999px;
 	cursor:pointer;
 	margin-right:5px;
@@ -128,12 +140,13 @@ span.arrow{
 }
 
 
+/* The Search tutorialzine.com / Search the Web radio buttons */
 
 
 #searchInContainer{
 	float:left;
 	margin-top:12px;
-	width:500px;
+	width:330px;
 }
 
 label{
@@ -179,11 +192,9 @@ p.notFound{
 /* Web & news results */
 
 
-/*.webResult{ text-shadow:1px 1px 0 #586a75;margin-bottom:50px;}*/
-.webResult{ text-shadow:1px 1px 0 black;margin-bottom:50px;}
+.webResult{ text-shadow:1px 1px 0 #586a75;margin-bottom:50px;}
 .webResult h2{ 
-	/*background-color:#5D6F7B;*/
-    background-color:blue;
+	background-color:#5D6F7B;
 	font-size:18px;
 	font-weight:normal;
 	padding:8px 20px;
@@ -198,8 +209,6 @@ p.notFound{
 .webResult p{ line-height:1.5;padding:15px 20px;}
 .webResult p b{ color:white;}
 .webResult > a{ margin-left:20px;}
-
-
 
 
 /* Image & video search results */
