--- a/GKMetroWeb/css/search/styles.css
+++ b/GKMetroWeb/css/search/styles.css
@@ -29,14 +29,14 @@ h1{
 	/* The search form. */
 	/*background-color:#4C5A65;*/
 	padding:50px 50px 30px;
-	margin:80px 0;
+	margin:84px 0 80px 0;
 	position:relative;
 
 	-moz-border-radius:16px;
 	-webkit-border-radius:16px;
 	border-radius:16px;
-    top: -66px;
-    left: 252px;
+    top: -97px;
+    left: 226px;
     height: 1px;
     width: 982px;
 }
