--- a/GKMetroWeb/css/search/styles.css
+++ b/GKMetroWeb/css/search/styles.css
@@ -49,7 +49,7 @@ fieldset{
 	/* This div contains the transparent search box */
 	width:420px;
 	height:36px;
-	background:url("../../images/search/searchBox.png") no-repeat;
+	background:url("../../images/search/searchBox.png") no-repeat ;
 	float:left;
 	margin-right:12px;
 }
@@ -59,8 +59,9 @@ fieldset{
 	
 	border:none;
 	color:#888888;
+    
 	background:url("../../images/search/searchBox.png") no-repeat;
-	
+	border-color:black;
 	float:left;
 	font-family:Arial,Helvetica,sans-serif;
 	font-size:15px;
@@ -194,8 +195,9 @@ p.notFound{
 
 .webResult{ text-shadow:1px 1px 0 #586a75;margin-bottom:50px;}
 .webResult h2{ 
-	background-color:#5D6F7B;
-	font-size:18px;
+	/*background-color:#5D6F7B;*/
+    background-color : blueviolet;
+	font-size:15px;
 	font-weight:normal;
 	padding:8px 20px;
 	
@@ -207,8 +209,8 @@ p.notFound{
 .webResult h2 b{ color:#fff; }
 .webResult h2 a{ color:#eee;border:none;}
 .webResult p{ line-height:1.5;padding:15px 20px;}
-.webResult p b{ color:white;}
-.webResult > a{ margin-left:20px;}
+.webResult p b{ color:black;}
+.webResult > a{ margin-left:20px; color:blue;font-size:15px}
 
 
 /* Image & video search results */
@@ -248,7 +250,7 @@ p.notFound{
 
 /* Giving Credit */
 
-p.credit{
+/*p.credit{
 	margin:20px 0;
 	text-align:center;
 }
@@ -280,5 +282,5 @@ a:hover{
 }
 
 .clear{
-	clear:both;
+	clear:both;*/
 }
