--- a/GKMetroWeb/MasterPage.master
+++ b/GKMetroWeb/MasterPage.master
@@ -257,7 +257,7 @@
      
      <%--<footer class ="" data-load ="Footer.aspx"></footer>--%>
 
-    <div class="bg-black">
+    <div class="bg-black text-shadow">
             <div class="container" style="padding: 5px;">
                 <div class="grid no-margin">
                     <div class="row no-margin">
@@ -268,24 +268,24 @@
 
                         <div class="span4 padding0">
 
-                            <h3 class="fg-white">Follow Me</h3>
+                            <h3 class="fg-white text-shadow ">Follow Me</h3>
                             <a class="icon-blogger on-right on-left" href ="http://gopalakrishnaiitb.blogspot.in/" style="background: orange;color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-blogger on-right on-left" href ="http://gopalakrishnatech.blogspot.in/" style="background: red;color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-facebook on-right on-left" href ="https://www.facebook.com/gopalakrishna.iitb" style="background: blue;color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-linkedin on-right on-left" href ="https://www.linkedin.com/profile/view?id=97684873&trk=nav_responsive_tab_profile" style="background: magenta;color: white; padding: 10px; border-radius: 50%"></a>
 
-                            <h3 class="fg-white">Contact Me</h3>
+                            <h3 class="fg-white text-shadow">Contact Me</h3>
                             <a class="icon-phone on-right on-left" href ="tel:918978556611" style="background: orange;color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-mail on-right on-left" href ="mailto:gopala.krishna@outlook.com" style="background: green;color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-location on-right on-left" href ="https://www.google.co.in/maps/place/Hyderabad" style="background: yellow;color: white; padding: 10px; border-radius: 50%"></a>
                             <a class="icon-skype on-right on-left" href ="skype:gopala.krishna_1" style="background: skyblue;color: white; padding: 10px; border-radius: 50%"></a>
                            
-                             <h3 class="fg-white"> Like & Share</h3>
+                             <h3 class="fg-white text-shadow"> Like & Share</h3>
                              <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgeekgopalakrishna.com%2F&amp;width=200&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:21px;" allowTransparency="true"></iframe>
                         </div>
 
                         <div class="span6 padding5">
-                                    <h4 class="fg-white">Contact me if you need professional advice on</h4>
+                                    <h4 class="fg-white text-shadow">Contact me if you need professional advice on</h4>
                          </div>
 
                         <div class="span3 padding0">
@@ -312,7 +312,7 @@
                 </div>
             </div>
 
-            <div class="container tertiary-text bg-black fg-white " style="padding: 0px " >
+            <div class="container tertiary-text bg-black fg-white text-shadow  " style="padding: 0px" >
                 <footer>
                     <div class="bottom-menu-wrapper fg-white" >
                         <ul class="horizontal-menu compact fg-white">
