--- a/GKMetroWeb/css/search/styles.css
+++ b/GKMetroWeb/css/search/styles.css
@@ -6,7 +6,7 @@
 body{
 	font-size:13px;
 	color:#eee;
-	font-family:Arial, Helvetica, sans-serif;
+	font-family:'Segoe UI';
 	/*background:url('img/bg.jpg') repeat-x #718693;*/
 }
 
@@ -18,7 +18,7 @@ body{
 }
 
 h1{
-	font-family:Corbel,'Myriad Pro',Arial, Helvetica, sans-serif;
+	font-family:  'Segoe UI';
 	background:url('img/heading.png') no-repeat center top;
 	text-indent:-9999px;
 	overflow:hidden;
@@ -63,7 +63,7 @@ fieldset{
 	background:url("../../images/search/searchBox.png") no-repeat;
 	border-color:black;
 	float:left;
-	font-family:Arial,Helvetica,sans-serif;
+	font-family:'Segoe UI';
 	font-size:15px;
 	height:36px;
 	line-height:36px;
