--- a/GKMetroWeb/css/search/styles.css
+++ b/GKMetroWeb/css/search/styles.css
@@ -7,7 +7,6 @@ body{
 	font-size:13px;
 	color:#eee;
 	font-family:'Segoe UI';
-	/*background:url('img/bg.jpg') repeat-x #718693;*/
 }
 
 #page{
@@ -17,133 +16,6 @@ body{
     height: 156px;
 }
 
-h1{
-	font-family:  'Segoe UI';
-	background:url('img/heading.png') no-repeat center top;
-	text-indent:-9999px;
-	overflow:hidden;
-	height:90px;
-}
-
-#searchForm{
-	/* The search form. */
-	/*background-color:#4C5A65;*/
-	padding:50px 50px 30px;
-	margin:84px 0 80px 0;
-	position:relative;
-
-	-moz-border-radius:16px;
-	-webkit-border-radius:16px;
-	border-radius:16px;
-    top: -97px;
-    left: 226px;
-    height: 1px;
-    width: 982px;
-}
-
-fieldset{
-	border:none;
-}
-
-#searchInputContainer{
-	/* This div contains the transparent search box */
-	width:420px;
-	height:36px;
-	background:url("../../images/search/searchBox.png") no-repeat ;
-	float:left;
-	margin-right:12px;
-}
-
-#s{
-	/* The search text box. */
-	
-	border:none;
-	color:#888888;
-    
-	background:url("../../images/search/searchBox.png") no-repeat;
-	border-color:black;
-	float:left;
-	font-family:'Segoe UI';
-	font-size:15px;
-	height:36px;
-	line-height:36px;
-	margin-right:12px;
-	outline:medium none;
-	padding:0 0 0 35px;
-	text-shadow:1px 1px 0 white;
-	width:385px;
-}
-
-/* The UL that contains the search type icons */
-
-.icons{
-	list-style:none;
-	margin:10px 0 0 335px;
-	height:19px;
-	position:relative;
-}
-
-.icons li{
-	background:url("img/icons.png") no-repeat;
-	float:left;
-	height:19px;
-	text-indent:-9999px;
-	cursor:pointer;
-	margin-right:5px;
-}
-
-/* Styling each icon */
-
-li.web{ width:15px;}
-li.web.active,
-li.web:hover{ background-position:left bottom;}
-
-li.images{ width:22px; background-position:-18px 0;}
-li.images.active,
-li.images:hover{ background-position:-18px bottom;}
-
-li.news{ width:14px; background-position:-44px 0;}
-li.news.active,
-li.news:hover{ background-position:-44px bottom;}
-
-li.videos{ width:17px; background-position:right 0;}
-li.videos.active,
-li.videos:hover{ background-position:right bottom;}
-
-span.arrow{
-	/* The little arrow that moves below the icons */
-	
-	width:11px;
-	height:6px;
-	margin:21px 0 0 5px;
-	position:absolute;
-	background:url('img/arrow.png') no-repeat;
-	left:0;
-}
-
-
-/* The submit button */
-
-
-#submitButton{
-	background:url('../../images/search/buttons.png') no-repeat;
-	width:83px;
-	height:36px;
-	text-indent:-9999px;
-	overflow:hidden;
-	text-transform:uppercase;
-	border:none;
-	cursor:pointer;
-}
-
-#submitButton:hover{
-	background-position:left bottom;
-}
-
-
-/* The Search tutorialzine.com / Search the Web radio buttons */
-
-
 #searchInContainer{
 	float:left;
 	margin-top:12px;
@@ -151,7 +23,7 @@ span.arrow{
 }
 
 label{
-	color:#DDDDDD;
+    color:black;
 	cursor:pointer;
 	font-size:11px;
 	position:relative;
@@ -162,22 +34,14 @@ label{
 	/*float:left;*/
 }
 
-input[type=radio]{
-	cursor:pointer;
-	/*float:left;*/
-}
-
 
 /* Styling the search results */
-
-
 .pageContainer{
 	/* Holds each page with search results. Has an inset bottom border. */
 	border-bottom:1px solid #5e7481;
 	margin-bottom:50px;
 	
 	/* Adding a dark bottom border with box shadow */
-	
 	-moz-box-shadow:0 1px 0 #798e9c;
 	-webkit-box-shadow:0 1px 0 #798e9c;
 	box-shadow:0 1px 0 #798e9c;
@@ -191,31 +55,34 @@ p.notFound{
 
 
 /* Web & news results */
-
-
-.webResult{ text-shadow:1px 1px 0 #586a75;margin-bottom:50px;}
+.webResult{ text-shadow:1px 1px 0 ;margin-bottom:50px;}
 .webResult h2{ 
-	/*background-color:#5D6F7B;*/
-    background-color : blueviolet;
-	font-size:15px;
-	font-weight:normal;
-	padding:8px 20px;
-	
-	/* Applying CSS3 rounded corners */
-	-moz-border-radius:18px;
-	-webkit-border-radius:18px;
-	border-radius:18px;
+    border: 1px solid #d1d1d1;
+    font: bold 12px Segoe UI;
+    font-size:15px;
+    color:black;
+    padding: 6px 15px 6px 35px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -webkit-transition: all 0.7s ease 0s;
+    -moz-transition: all 0.7s ease 0s;
+    -o-transition: all 0.7s ease 0s;
+    transition: all 0.7s ease 0s;
+
 }
-.webResult h2 b{ color:#fff; }
-.webResult h2 a{ color:#eee;border:none;}
+.webResult h2 b{  color:blue; }
+.webResult h2 a{ color:black;border:none;}
 .webResult p{ line-height:1.5;padding:15px 20px;}
 .webResult p b{ color:black;}
 .webResult > a{ margin-left:20px; color:blue;font-size:15px}
 
 
 /* Image & video search results */
-
-
 .imageResult{
 	float:left;
 	height:180px;
@@ -235,11 +102,23 @@ p.notFound{
 /* The show more button */
 
 #more{
-	width:83px;
-	height:24px;
-	background:url('../../images/search/more.png') no-repeat;
-	cursor:pointer;
-	margin:40px auto;
+	 border: 1px solid #d1d1d1;
+    font: bold 12px Segoe UI;
+    color:black;
+    width: 150px;
+    padding: 6px 15px 6px 35px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -webkit-transition: all 0.7s ease 0s;
+    -moz-transition: all 0.7s ease 0s;
+    -o-transition: all 0.7s ease 0s;
+    transition: all 0.7s ease 0s;
+    margin:40px auto;
 }
 
 #more:hover{
@@ -248,39 +127,51 @@ p.notFound{
 
 
 
-/* Giving Credit */
+#search {
 
-/*p.credit{
-	margin:20px 0;
-	text-align:center;
 }
 
-p.credit a{
-	background-color:#4B5A64;
-	border:1px solid;
-	border-color:#3D4D57 #788E9B #788E9B #3D4D57;
-	color:#c0d0d8;
-	font-size:10px;
-	padding:4px 8px;
-	text-shadow:1px 1px 0 #38464F;
-}
+#search input[type="text"] {
+    border: 1px solid #d1d1d1;
+    font: bold 12px Segoe UI;
+    color: #bebebe;
+    width: 150px;
+    padding: 6px 15px 6px 35px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -webkit-transition: all 0.7s ease 0s;
+    -moz-transition: all 0.7s ease 0s;
+    -o-transition: all 0.7s ease 0s;
+    transition: all 0.7s ease 0s;
+    }
 
-p.credit a:hover{
-	background-color:#38464f;
-	border-color:#38464f #788E9B #788E9B #38464f;
-}
+#search input[type="submit"] {
+    border: 1px solid #d1d1d1;
+    font: bold 12px Segoe UI;
+    background-color:lightskyblue;
+    width: 150px;
+    padding: 6px 15px 6px 35px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -webkit-transition: all 0.7s ease 0s;
+    -moz-transition: all 0.7s ease 0s;
+    -o-transition: all 0.7s ease 0s;
+    transition: all 0.7s ease 0s;
+    }
 
-a, a:visited {
-	text-decoration:none;
-	outline:none;
-	border-bottom:1px dotted #97cae6;
-	color:#97cae6;
-}
-
-a:hover{
-	border-bottom:1px dashed transparent;
-}
-
-.clear{
-	clear:both;*/
-}
+#search input[type="text"]:focus {
+    width: 200px;
+    }
+#search input[type="radio"]: {
+    color:black;
+    }
